--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch": "^2.6.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prismjs": "^1.29.0"
   }
 }
